# infoberry

./: .gitignore  Dockerfile  README.md  client-config.yaml  pyproject.toml  requirements.txt
client/: config.py  player.py  run.py  utilts.py
server/: run.py  uwsgi.ini
server/app/: __init__.py  config.py  schema.sql
server/app/management/: __init__.py  route.py
server/app/player/: __init__.py  route.py
server/app/templates/: base.html  management.html  player_playlist.html
src/info_berry/client/: config.py  content.py  display.py  main.py  player.py
tests/: conftest.py  test_config.py  test_content.py  test_display.py  test_main.py  test_player.py
